Create searchByCategory API.
